# mass-convert

./: .gitignore  README.md  pdf_to_jpg_converter.py  pdf_to_jpg_convertor.py  pyproject.toml  requirements-dev.txt  requirements.txt
scripts/: build-mac.sh  build-windows.ps1
src/pdf_to_jpg_app/: __init__.py  __main__.py  converter.py  gui.py  worker.py
tests/: test_converter.py  test_worker.py
