[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-to-jpg-app"
version = "0.1.0"
description = "Desktop utility for converting PDF scans to JPG files."
requires-python = ">=3.12,<3.14"
dependencies = [
    "PyMuPDF>=1.24,<2",
]

[project.scripts]
pdf-to-jpg-app = "pdf_to_jpg_app.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

